--- a/Index.html
+++ b/Index.html
@@ -59,12 +59,12 @@
       <p>Portfolio </p>
     
     </div>
-    <div class="project">
+    <!-- <div class="project">
       <h2>Project 2</h2>
       
       <p>Description of project 2.</p>
       <a href="#">View Project</a>
-    </div>
+    </div> -->
   </section>
 
   <section id="skills">
