--- a/Index.html
+++ b/Index.html
@@ -33,20 +33,22 @@
   <section id="home" class="active">
     <div class="home-container">
       <h1 class="name">Afikile Kili</h1>
-      <p class="title">Portfolio</p>
+      <p class="title">Software Developer | AI Associate</p>
     </div>
   </section>
 
   <section id="about">
     <div class="about-container">
-      <div class="profile-image">
-        <img src="Afikile.jpeg" alt="Profile Picture" class="profile-pic">
-      </div>
+      <!-- <div class="profile-image">
+        <img src="KILI.PNG.jpeg" alt="Profile Picture" class="profile-pic">
+      </div> -->
       <div class="about-content">
         <h1>About Me</h1>
-        <p>I’m an aspiring upcoming software developer with a  background in software development. I hold a diploma and an advanced qualification in Software Development and am currently expanding my skills as an AI Associate through a learnership at Capaciti.
+        <p>I’m an aspiring software developer with a solid foundation in software development. I hold a diploma and an advanced qualification in Software Development and am currently expanding my skills as an AI Associate through a learnership at Capaciti. My passion for learning and growth has driven me to continually explore emerging technologies, particularly in artificial intelligence, and how they can be used to create smarter, more efficient systems.
 
-          With a passion for learning and growth, I have also tutored university students to help them overcome challenges in software development. I’m eager to apply my technical expertise, leadership abilities, and excellent communication skills to design and implement innovative software solutions, while continuously learning and sharing knowledge.</p>
+        Throughout my journey, I’ve had the opportunity to tutor university students, helping them overcome challenges in software development, which has enhanced my own problem-solving and mentoring skills. This experience has also deepened my commitment to fostering a collaborative learning environment, as I believe that the exchange of knowledge is a key to personal and professional growth.
+
+        I’m eager to apply my technical expertise, leadership abilities, and excellent communication skills to design and implement innovative software solutions. With a deep desire to contribute to meaningful projects, I am committed to delivering high-quality results while continuously learning, evolving, and sharing knowledge with others. Whether working in a team or independently, I thrive on tackling complex challenges and transforming ideas into practical, real-world solutions.</p>
       </div>
     </div>
   </section>
@@ -54,9 +56,9 @@
   <section id="projects">
     <h1>My Projects</h1>
     <div class="project">
-      <h2>Project 1</h2>
+      <h2>Portfolio </h2>
       
-      <p>Portfolio </p>
+      <p>Personal Portfolio using HTML,CSS,JavaScript</p>
     
     </div>
     <!-- <div class="project">
@@ -122,7 +124,7 @@
         <ul class="contact-list">
             <li><i class="fas fa-envelope"></i> Email: afikilekili@gmail.com</li>
             <li><i class="fas fa-phone"></i> Contact number: 0605159934</li>
-            <li><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/afikile-kili-272856283" target="_blank">www.linkedin.com/in/afikile-kili-272856283</a></li>
+            <li><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/afikile-kili-272856283" target="_blank">LINKEDIN</a></li>
         </ul>
     </form>
   </section>
